Finalizada a documentação do swagger para as rotas da API; criação da build do projeto.
